--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -15,4 +15,6 @@ jobs:
       
       - uses: IvanovIvanov2/labeler@v5.0.0-beta.1
       
+      - uses: IvanovIvanov2/labeler@v5.0.0-beta
+      
 
