--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -13,6 +13,8 @@ jobs:
       
       - uses: IvanovIvanov2/labeler@4f052778de9a9b80cb16cfb9079b02287285a4cb
       
+      - uses: IvanovIvanov2/labeler@v5.0.0-beta
+      
       - uses: IvanovIvanov2/labeler@v5.0.0-beta.1
       
 
